# Erste_Schritte_mit_Python

./: README.md
docs/: index.html  tag2.html  tag3.html  tag4.html
src/Module/: maximum.py  programm.py
src/Projekt1/: teil1.py  teil2.py
src/Projekt2/: teil1.py  teil2.py  teil3.py
src/Projekt3/: teil1_1.py  teil1_2.py  teil2.py
src/Projekt4/: LICENSE  README.md  pyproject.toml  wetter.py
src/Projekt4/src/wetter_tomirgang/: __init__.py  wetter.py
