[project]
name = "wetter_tomirgang"
version = "1.0.0"
authors = [
  { name="Thomas Irgang", email="thomas@irgang.eu" },
]
description = "A small app to get the local weather"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["requests"]
